--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,10 +27,12 @@
                  Use com.example.android.navigation.TitleFragment for the android:name
                  Use match_parent for the layout_height and layout_width -->
             <fragment
+                android:id="@+id/myNavHostFragment"
+                android:name="androidx.navigation.fragment.NavHostFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/titleFragment"
-                android:name="com.example.android.navigation.TitleFragment"
+                app:navGraph="@navigation/navigation"
+                app:defaultNavHost="true"
                 /> <!--fragment do not need a closing type -->
         </LinearLayout>
 
